@@ -1,3 +1,12 @@
+2010-04-01  Jakub Jelinek  <jakub@redhat.com>
+
+	* dwarf2.c (read_attribute_value): Handle CU version 4
+	for DW_FORM_ref_addr, handle DW_FORM_sec_offset, DW_FORM_exprloc
+	and DW_FORM_flag_present.  For unknown form value return NULL.
+	(scan_unit_for_symbols): For DW_AT_location handle DW_FORM_exprloc
+	like DW_FORM_block.
+	(parse_comp_unit): Allow CU version 4.
+
 2010-04-01  Hans-Peter Nilsson  <hp@axis.com>
 
 	* elf32-cris.c (cris_elf_relocate_section): Correct first argument
